feat: new styling

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ const policy = await getCollection("policy");
 	<p>
 		&copy; {date} Naparajith.
 	</p>
-	<span class="flex scale-90 flex-row justify-between ~gap-2/4 md:flex-col">
+	<span class="flex flex-row justify-between ~gap-2/4 md:flex-col">
 		{
 			policy.map((policy) => (
 				<A
