style: fixed border stylings

--- a/src/components/quick-view/github/GitHubLoading.astro
+++ b/src/components/quick-view/github/GitHubLoading.astro
@@ -1,7 +1,7 @@
 <h3>GitHub Stats</h3>
 <div>
 	<div
-		class="flex flex-wrap justify-evenly rounded-lg border border-border ~gap-2/4 ~p-2/4"
+		class="flex flex-wrap justify-evenly rounded-xl border border-border ~gap-2/4 ~p-2/4"
 	>
 		<span
 			>Repositories: <strong class="animate-pulse">
