--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -48,7 +48,7 @@ const translations = [
 		</ul>
 
 		<div
-			class="flex flex-wrap justify-evenly rounded-lg border border-border ~gap-2/4 ~p-2/4"
+			class="flex flex-wrap justify-evenly rounded-xl border border-border ~gap-2/4 ~p-2/4"
 		>
 			<span>
 				<A
