fix: home hero image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const author = await getEntry(post.data.author);
 					height={540}
 					decoding={"async"}
 					loading={"eager"}
-					src={github.avatar_url ?? "/favicon.svg"}
+					src={"https://avatars.githubusercontent.com/u/74095696?v=4"}
 				/>
 			</span>
 
