--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -27,7 +27,9 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 		{post.data.title}
 	</h1>
 	<div class="flex flex-grow flex-col justify-evenly ~gap-4/8">
-		<h4 transition:name="post-description">{post.data.description}</h4>
+		<p class="font-semibold" transition:name="post-description">
+			<span>{post.data.description}</span>
+		</p>
 		<a
 			href={author.data.social}
 			target="_blank"
@@ -69,8 +71,8 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 			class="aspect-auto w-full border border-border ~rounded-none/xl"
 			transition:name="image"
 		/>
-		<figcaption class="text-center">
-			This image comes from <A
+		<figcaption class="bg-background text-center text-foreground">
+			<span class="font-semibold italic">This image comes from </span><A
 				href={post.data.image}
 				title={post.data.title}
 				target="_blank"
