refactor: smaller images, smaller styles

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -65,6 +65,8 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 			src={post.data.image}
 			alt={post.data.title}
 			inferSize
+			width="1920"
+			height="1080"
 			formats={["webp", "avif"]}
 			loading={"eager"}
 			decoding={"async"}
