--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ import Header from "@/components/Header.astro";
 interface Props {
 	title: string;
 	description: string;
+	ogImage?: string;
 }
 
 const { title, description } = Astro.props;
@@ -26,6 +27,7 @@ const { title, description } = Astro.props;
 		<meta property="og:site_name" content="Naparajith" />
 		<meta property="og:title" content=`${title} | Naparajith` />
 		<meta property="og:url" content={Astro.url} />
+		<meta property="og:image" content={Astro.props.ogImage} />
 
 		<meta property="twitter:title" content=`${title} | Naparajith` />
 		<meta property="twitter:description" content={description} />
