--- a/src/components/quick-view/leetcode/LeetCodeLoading.astro
+++ b/src/components/quick-view/leetcode/LeetCodeLoading.astro
@@ -1,6 +1,6 @@
 <h3>LeetCode Stats</h3>
 <div
-	class="flex flex-wrap justify-evenly rounded-xl border border-border ~gap-2/4 ~p-2/4"
+	class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
 >
 	<span
 		>Rank: <strong class="animate-pulse">
