--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -35,7 +35,7 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 			href={author.data.social}
 			target="_blank"
 			title={author.data.name}
-			class="flex flex-row items-center justify-center rounded-xl border border-border no-underline ~-my-2/4 ~gap-2/4 hover:bg-foreground/10"
+			class="flex flex-row items-center justify-center border border-border no-underline ~-my-2/4 ~gap-2/4 ~rounded-none/xl hover:bg-foreground/10"
 		>
 			<Image
 				src={author.data.image}
@@ -45,16 +45,17 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 				decoding={"async"}
 				width={48}
 				height={48}
-				class="rounded-full ~-my-2/4 ~size-6/12"
+				class="hidden rounded-full ~-my-2/4 ~size-6/12 md:inline"
 			/>
 			<p>{author.data.name}</p>
 			<small
 				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
-				>{author.data.occupation}</small
 			>
+				{author.data.occupation}
+			</small>
 		</a>
 		<div
-			class="flex flex-row flex-wrap justify-between rounded-xl border border-border ~-mb-2/4 ~px-4/8 ~py-2/4"
+			class="flex flex-row flex-wrap justify-between border border-border ~-mb-2/4 ~rounded-none/xl ~px-4/8 ~py-2/4"
 		>
 			<strong>{remarkPluginFrontmatter.minutesRead}</strong>
 			<strong>{post.data.created.toDateString().slice(4)}</strong>
