--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -18,9 +18,9 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 			posts.map(async (post) => (
 				<a
 					href={`/blog/${post.id}`}
-					class="flex w-full flex-col justify-evenly rounded-xl border border-border decoration-transparent hover:bg-foreground/10"
+					class="flex w-full flex-col justify-evenly border border-border decoration-transparent ~rounded-none/xl hover:bg-foreground/10"
 				>
-					<div class="p-2 ~rounded-xl">
+					<div class="p-2 ~rounded-none/xl">
 						<Image
 							src={post.data.image}
 							alt={post.data.title}
