--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -15,7 +15,7 @@ import Layout from "@/layouts/Layout.astro";
 >
 	<h3>Links</h3>
 	<div
-		class="flex flex-wrap justify-evenly rounded-xl border border-border ~gap-2/4 ~p-2/4"
+		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
 	>
 		<span>
 			<A
