--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,17 @@
 ---
 import A from "@/components/A.astro";
-
-const pathname = Astro.url.pathname;
 ---
 
 <header
 	class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
 >
 	<h3 class="text-center">
-		{pathname.toString().replace("/", "").replace(/\/.*/, "")}
+		{Astro.url.pathname.toString().replace("/", "").replace(/\/.*/, "")}
 	</h3>
 	<div class="flex justify-between" transition:persist>
 		<div class="flex flex-wrap justify-evenly gap-4">
 			<A href="/">Home</A>
 			<A href="/profile"> Profile </A>
-			<!-- <A href="/blog">Blog</A> -->
 			<A href="/quick-view"> Quick View </A>
 		</div>
 
