style: improved view ports

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,7 +11,7 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 	title="Blog"
 	description="The Official Blog for Naparajith, a Software Engineer from India"
 >
-	<div
+	<main
 		class="flex min-h-[60vh] flex-row flex-wrap place-content-center justify-evenly ~gap-2/4"
 	>
 		{
@@ -49,5 +49,5 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 			))
 		}
 		<!-- <h1>Coming Soon!</h1> -->
-	</div>
+	</main>
 </Layout>
