--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -13,81 +13,83 @@ import Layout from "@/layouts/Layout.astro";
 	title="Quick View"
 	description="A collection of Quick Links for my personal website"
 >
-	<h3>Links</h3>
-	<div
-		class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
-	>
-		<span>
-			<A
-				href={"https://github.com/DrInfinite"}
-				title={`GitHub - DrInfinite`}
-				target="_blank"
-			>
-				GitHub
-			</A>
-		</span>
-		<span>
-			<A
-				href={"https://leetcode.com/u/DrInfinite/"}
-				title={`LeetCode - Naparajith T L`}
-				target="_blank"
-			>
-				LeetCode
-			</A>
-		</span>
-		<span>
-			<A
-				href="https://www.linkedin.com/in/naparajith/"
-				title="LinkedIn - Naparajith T L"
-				target="_blank"
-			>
-				LinkedIn
-			</A>
-		</span>
-		<span>
-			<A
-				href={"https://bsky.app/profile/naparajith.in"}
-				title={`Naparajith | DrInfinite (@naparajith.in)`}
-				target="_blank"
-			>
-				BlueSky
-			</A>
-		</span>
-		<span>
-			<A href="/" title="Portfolio - Home"> Portfolio </A>
-		</span>
-		<span>
-			<A href="/blog" title="Portfolio - Blog"> Blog </A>
-		</span>
-	</div>
+	<main class="min-h-[60vh]">
+		<h3>Links</h3>
+		<div
+			class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
+		>
+			<span>
+				<A
+					href={"https://github.com/DrInfinite"}
+					title={`GitHub - DrInfinite`}
+					target="_blank"
+				>
+					GitHub
+				</A>
+			</span>
+			<span>
+				<A
+					href={"https://leetcode.com/u/DrInfinite/"}
+					title={`LeetCode - Naparajith T L`}
+					target="_blank"
+				>
+					LeetCode
+				</A>
+			</span>
+			<span>
+				<A
+					href="https://www.linkedin.com/in/naparajith/"
+					title="LinkedIn - Naparajith T L"
+					target="_blank"
+				>
+					LinkedIn
+				</A>
+			</span>
+			<span>
+				<A
+					href={"https://bsky.app/profile/naparajith.in"}
+					title={`Naparajith | DrInfinite (@naparajith.in)`}
+					target="_blank"
+				>
+					BlueSky
+				</A>
+			</span>
+			<span>
+				<A href="/" title="Portfolio - Home"> Portfolio </A>
+			</span>
+			<span>
+				<A href="/blog" title="Portfolio - Blog"> Blog </A>
+			</span>
+		</div>
 
-	<GitHub server:defer>
-		<GitHubLoading slot="fallback" />
-	</GitHub>
+		<GitHub server:defer>
+			<GitHubLoading slot="fallback" />
+		</GitHub>
 
-	<LeetCode server:defer>
-		<LeetCodeLoading slot="fallback" />
-	</LeetCode>
+		<LeetCode server:defer>
+			<LeetCodeLoading slot="fallback" />
+		</LeetCode>
 
-	<h2>Contact</h2>
-	<p>
-		Get in touch with me through this form or by using the email
-		<A href="mailto:naparajith@duck.com"> naparajith@duck.com</A> or one of the social
-		platforms mentioned above.
-	</p>
-
-	<details>
-		<summary>Why is there no Contact Form?</summary>
+		<h2>Contact</h2>
 		<p>
-			A contact form requires a good amount of client-side JS. I currently have
-			no idea on how to make this client-side code as transparent and as open as
-			possible to the end user. I also don't have an idea as to how to pull this
-			off without any JS (if that's even possible). Therefore, for the moment,
-			so such form exists.
+			Get in touch with me through this form or by using the email
+			<A href="mailto:naparajith@duck.com"> naparajith@duck.com</A> or one of the
+			social platforms mentioned above.
 		</p>
-		<p>
-			A contact form may exist in the future, but not now. And no guarantee is
-			made on a timeline of when it will.
-		</p>
-	</details>
+
+		<details>
+			<summary>Why is there no Contact Form?</summary>
+			<p>
+				A contact form requires a good amount of client-side JS. I currently
+				have no idea on how to make this client-side code as transparent and as
+				open as possible to the end user. I also don't have an idea as to how to
+				pull this off without any JS (if that's even possible). Therefore, for
+				the moment, so such form exists.
+			</p>
+			<p>
+				A contact form may exist in the future, but not now. And no guarantee is
+				made on a timeline of when it will.
+			</p>
+		</details>
+	</main>
 </Layout>
