--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,29 @@
 ---
+/**
+ * This website is only meant to showcase the work and and skills of the author,
+ * on a professional level. It also has a blog, containing the author's observations
+ * and opinions on various topics. The views expressed are the author's own.
+ * Copyright (C) 2024  T L Naparajith
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License Version 3 as published
+ * by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
+ *
+ * Contact me through electronic mail: <naparajith@duck.com>
+ */
+
 import A from "@/components/A.astro";
 import Layout from "@/layouts/Layout.astro";
 import type { GetStaticPaths } from "astro";
-import { Image, Picture } from "astro:assets";
+import { getImage, Image, Picture } from "astro:assets";
 import { getCollection, getEntry, render } from "astro:content";
 
 export const getStaticPaths = (async () => {
@@ -17,12 +38,13 @@ export const getStaticPaths = (async () => {
 const { post } = Astro.props;
 const author = await getEntry(post.data.author);
 const { Content, remarkPluginFrontmatter } = await render(post);
+const postImage = await getImage({ src: post.data.image, format: "webp" });
 ---
 
 <Layout
 	title={`${post.data.title}`}
 	description=`Blog Post: ${post.data.title} - ${[post.data.description]}`
-	ogImage={post.data.image}
+	ogImage={postImage.src}
 >
 	<h1 class="text-center" transition:name="post-title">
 		{post.data.title}
@@ -64,7 +86,7 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 	</div>
 	<figure>
 		<Picture
-			src={post.data.image}
+			src={postImage.src}
 			alt={post.data.title}
 			inferSize
 			width="1920"
@@ -77,7 +99,7 @@ const { Content, remarkPluginFrontmatter } = await render(post);
 		/>
 		<figcaption class="bg-background text-center text-foreground">
 			<span class="font-semibold italic">This image comes from </span><A
-				href={post.data.image}
+				href={postImage.src}
 				title={post.data.title}
 				target="_blank"
 			>
