--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,27 @@
 ---
+/**
+ * This website is only meant to showcase the work and and skills of the author,
+ * on a professional level. It also has a blog, containing the author's observations
+ * and opinions on various topics. The views expressed are the author's own.
+ * Copyright (C) 2024  T L Naparajith
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License Version 3 as published
+ * by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
+ *
+ * Contact me through electronic mail: <naparajith@duck.com>
+ */
+
 import Layout from "@/layouts/Layout.astro";
-import { Image } from "astro:assets";
+import { getImage, Image } from "astro:assets";
 import { getCollection, getEntry } from "astro:content";
 
 let posts = await getCollection("blog");
@@ -22,7 +43,9 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 				>
 					<div class="p-2 ~rounded-none/xl">
 						<Image
-							src={post.data.image}
+							src={
+								(await getImage({ src: post.data.image, format: "webp" })).src
+							}
 							alt={post.data.title}
 							inferSize
 							width={1920}
