--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,25 @@
 ---
+/**
+ * This website is only meant to showcase the work and and skills of the author,
+ * on a professional level. It also has a blog, containing the author's observations
+ * and opinions on various topics. The views expressed are the author's own.
+ * Copyright (C) 2024  T L Naparajith
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License Version 3 as published
+ * by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <https://www.gnu.org/licenses/agpl-3.0.txt>.
+ *
+ * Contact me through electronic mail: <naparajith@duck.com>
+ */
+
 export const prerender = false;
 
 import { GithubProfile } from "@/actions/github-profile";
@@ -33,7 +54,7 @@ const author = await getEntry(post.data.author);
 	title="Home"
 	description="The personal portfolio of T L Naparajith, a Software Engineer from India."
 >
-	<h1 class="text-center">{github.name}</h1>
+	<h1 class="text-center">Naparajith T L</h1>
 	<article>
 		<figure
 			class="flex flex-col content-around items-center justify-around ~gap-6/12"
@@ -69,6 +90,9 @@ const author = await getEntry(post.data.author);
 		</A>
 		<A href="/blog" title="Blog">Blog</A>
 		<A href="/quotes-i-like" title="Quotes">Quotes</A>
+		<A href={"/policy/privacy-policy.md"} title="Privacy Policy"
+			>Privacy Policy</A
+		>
 	</div>
 	<main>
 		<p>
@@ -151,8 +175,8 @@ const author = await getEntry(post.data.author);
 				{learning.map((concept) => <li>{concept}</li>)}
 			</ul>
 			<p>
-				If you would like to help me out in learning any of these concepts,
-				please write to <A
+				If you would like to help me out in learning any of these concepts or
+				would like to provide any feedback, please write to <A
 					href="mailto:naparajith@duck.com"
 					title="E-Mail Address"
 					target="_blank"
