--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,8 +33,8 @@ import A from "@/components/A.astro";
 			rel="cc:attributionURL"
 			href="https://www.naparajith.in/"
 		>
-			This site & its non-image content
-		</A> are licensed under <A
+			This site
+		</A> is licensed under <A
 			href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1"
 			target="_blank"
 			rel="license noopener noreferrer"
@@ -42,7 +42,7 @@ import A from "@/components/A.astro";
 		>
 			CC BY-NC-SA 4.0.
 		</A>
-		<span property="dct:title">All photos of me</span> are licensed under <A
+		<span property="dct:title">All images are</span> are licensed under <A
 			href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1"
 			target="_blank"
 			rel="license noopener noreferrer"
