--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,7 +42,7 @@ import A from "@/components/A.astro";
 		>
 			CC BY-NC-SA 4.0.
 		</A>
-		<span property="dct:title">All images are</span> are licensed under <A
+		<span property="dct:title">All images</span> are licensed under <A
 			href="https://creativecommons.org/licenses/by-nc-nd/4.0/?ref=chooser-v1"
 			target="_blank"
 			rel="license noopener noreferrer"
