--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,8 +33,8 @@ import A from "@/components/A.astro";
 			rel="cc:attributionURL"
 			href="https://www.naparajith.in/"
 		>
-			This site
-		</A> is licensed under <A
+			This site & its non-image content
+		</A> are licensed under <A
 			href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1"
 			target="_blank"
 			rel="license noopener noreferrer"
