feat: profile content updated

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -45,6 +45,19 @@ const translations = [
 	description="The official profile page for T L Naparajith, a Software Engineer from India"
 >
 	<article>
+		<h3>Who am I?</h3>
+		<p>
+			I am Naparajith, a Software Quality Engineer from India. I am passionate
+			about solving coding challenges, simple and complex everyday problems and
+			leveraging technology to better the lives of the people around me. My
+			career spans software development, engineering, quality assurance, test
+			automation, and internal tool development.
+		</p>
+		<h3>More about me</h3>
+		<p>
+			Many people are curious about my name and what it means. So here is your
+			answer.
+		</p>
 		<p>
 			The name Naparajith is deeply rooted in ancient Indian culture and roughly
 			translates to <strong>
@@ -55,8 +68,7 @@ const translations = [
 		</p>
 		<p>
 			I am sure that you might be interested in reading more about me. Here are
-			2 options, based on the purpose of your visit to this site and/or current
-			mood:
+			2 options, based on the purpose of your visit to this site:
 		</p>
 		<ul>
 			{
