--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,6 +53,33 @@ const defaultOgImage = "../images/arch-rainbow-1920x1080.png";
 
 		<meta property="twitter:title" content=`${title} | Naparajith` />
 		<meta property="twitter:description" content={description} />
+
+		<script is:inline>
+			const getThemePreference = () => {
+				if (
+					typeof localStorage !== "undefined" &&
+					localStorage.getItem("theme")
+				) {
+					return localStorage.getItem("theme");
+				}
+				return window.matchMedia("(prefers-color-scheme: dark)").matches
+					? "dark"
+					: "light";
+			};
+			const isDark = getThemePreference() === "dark";
+			document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+
+			if (typeof localStorage !== "undefined") {
+				const observer = new MutationObserver(() => {
+					const isDark = document.documentElement.classList.contains("dark");
+					localStorage.setItem("theme", isDark ? "dark" : "light");
+				});
+				observer.observe(document.documentElement, {
+					attributes: true,
+					attributeFilter: ["class"],
+				});
+			}
+		</script>
 	</head>
 	<body>
 		{Astro.url.pathname !== "/" ? <Header /> : <div class="~mb-10/20" />}
