--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,50 +103,52 @@ const author = await getEntry(post.data.author);
 			hosted as a repository on GitHub. The site is deployed, hosted and
 			distributed using Vercel.
 		</p>
-		<hr class="my-4 border-t-2 border-t-border" />
-		<h2>A random quote that I like</h2>
-		<figure
-			class="place-content-center border border-border p-4 ~gap-2/4 ~rounded-none/xl"
-		>
-			<blockquote cite={quote.data.cite}>{quote.data.quote}</blockquote>
-			<figcaption>
-				<cite>
-					-{" "}
-					<a
-						href={quote.data.cite}
-						title={`${quote.data.author} - ${quote.data.cite}`}
-						target="_blank"
-						class="text-inherit no-underline"
-					>
-						{quote.data.author}
-					</a>
-				</cite>
-			</figcaption>
-			<div class="float-end">
-				<A href="/quotes-i-like" title="Quotes">more like this</A>
-			</div>
-		</figure>
-		<h2>A random blog post</h2>
-		<a
-			href={`/blog/${post.id}`}
-			class="flex w-full flex-col justify-evenly border border-border decoration-transparent ~rounded-none/xl hover:bg-foreground/10"
-		>
-			<article class="flex flex-col ~gap-2/4 ~p-2/4">
-				<h4 class="-my-px" transition:name="post-title">
-					{post.data.title}
-				</h4>
-				<small class="-my-px line-clamp-2" transition:name="post-description">
-					{post.data.description}
-				</small>
-			</article>
-			<article
-				class="flex justify-between bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent ~p-2/4"
+		<div class="~space-y-4/8">
+			<hr class="my-4 border-t-2 border-t-border" />
+			<h2>A random quote that I like</h2>
+			<figure
+				class="place-content-center border border-border p-4 ~gap-2/4 ~rounded-none/xl"
 			>
-				<small>{post.data.created.toDateString()}</small>
-				<small>{author.data.name}</small>
-			</article>
-		</a>
-		<hr class="my-4 border-t-2 border-t-border" />
+				<blockquote cite={quote.data.cite}>{quote.data.quote}</blockquote>
+				<figcaption>
+					<cite>
+						-{" "}
+						<a
+							href={quote.data.cite}
+							title={`${quote.data.author} - ${quote.data.cite}`}
+							target="_blank"
+							class="text-inherit no-underline"
+						>
+							{quote.data.author}
+						</a>
+					</cite>
+				</figcaption>
+				<div class="float-end">
+					<A href="/quotes-i-like" title="Quotes">more like this</A>
+				</div>
+			</figure>
+			<h2>A random blog post</h2>
+			<a
+				href={`/blog/${post.id}`}
+				class="flex w-full flex-col justify-evenly border border-border decoration-transparent ~rounded-none/xl hover:bg-foreground/10"
+			>
+				<article class="flex flex-col ~gap-2/4 ~p-2/4">
+					<h4 class="-my-px" transition:name="post-title">
+						{post.data.title}
+					</h4>
+					<small class="-my-px line-clamp-2" transition:name="post-description">
+						{post.data.description}
+					</small>
+				</article>
+				<article
+					class="flex justify-between bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent ~p-2/4"
+				>
+					<small>{post.data.created.toDateString()}</small>
+					<small>{author.data.name}</small>
+				</article>
+			</a>
+			<hr class="my-4 border-t-2 border-t-border" />
+		</div>
 		<div>
 			<p>
 				When I was a kid, I was told a really inspiring quote about learning,
@@ -182,7 +184,7 @@ const author = await getEntry(post.data.author);
 					target="_blank"
 				>
 					naparajith@duck.com.
-				</A>
+				</A> I really appreciate any support provided.
 			</p>
 		</div>
 	</main>
