--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,9 +90,7 @@ const author = await getEntry(post.data.author);
 		</A>
 		<A href="/blog" title="Blog">Blog</A>
 		<A href="/quotes-i-like" title="Quotes">Quotes</A>
-		<A href={"/policy/privacy-policy.md"} title="Privacy Policy"
-			>Privacy Policy</A
-		>
+		<A href="/policy/privacy-policy" title="Privacy Policy">Privacy Policy</A>
 	</div>
 	<main>
 		<p>
@@ -129,7 +127,7 @@ const author = await getEntry(post.data.author);
 			</figure>
 			<h2>A random blog post</h2>
 			<a
-				href={`/blog/${post.id}`}
+				href={`/blog/${post.slug}`}
 				class="flex w-full flex-col justify-evenly border border-border decoration-transparent ~rounded-none/xl hover:bg-foreground/10"
 			>
 				<article class="flex flex-col ~gap-2/4 ~p-2/4">
