--- a/src/pages/policy/[slug].astro
+++ b/src/pages/policy/[slug].astro
@@ -27,7 +27,7 @@ import { getCollection, render } from "astro:content";
 export const getStaticPaths = (async () => {
 	const policies = await getCollection("policy");
 	return policies.map((policy) => ({
-		params: { slug: policy.id },
+		params: { slug: policy.slug },
 		props: { policy },
 	}));
 }) satisfies GetStaticPaths;
