feat: new leetcode design
- new leetcode page added
- updated directory structure to better incorporate better quick view
pages

--- a/src/pages/quick-view/index.astro
+++ b/src/pages/quick-view/index.astro
@@ -49,13 +49,7 @@ import Layout from "@/layouts/Layout.astro";
 				</A>
 			</span>
 			<span>
-				<A
-					href={"https://leetcode.com/u/DrInfinite/"}
-					title={`LeetCode - Naparajith T L`}
-					target="_blank"
-				>
-					LeetCode
-				</A>
+				<A href="/quick-view/leetcode" title="LeetCode">LeetCode</A>
 			</span>
 			<span>
 				<A
