--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,8 +26,13 @@ import A from "@/components/A.astro";
 <header
 	class="my-10 border border-l-0 border-r-0 border-t-0 border-border pb-4"
 >
-	<h3 class="text-center">
-		{Astro.url.pathname.toString().replace("/", "").replace(/\/.*/, "")}
+	<h3 class="text-start">
+		<span class="animate-pulse">~</span>/{
+			Astro.url.pathname.startsWith("/blog")
+				? Astro.url.pathname.toString().replace("/", "").replace(/\/.*/, "")
+				: Astro.url.pathname.toString().replace("/", "")
+		}
+		<!-- ~/{Astro.url.pathname.toString().replace("/", "").replace(/\/.*/, "")} -->
 	</h3>
 	<div class="flex justify-between" transition:persist>
 		<div class="flex flex-wrap justify-evenly gap-4">
