--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,7 +35,7 @@ import A from "@/components/A.astro";
 		<!-- ~/{Astro.url.pathname.toString().replace("/", "").replace(/\/.*/, "")} -->
 	</h3>
 	<div class="flex justify-between" transition:persist>
-		<div class="flex flex-wrap justify-evenly gap-4">
+		<div class="flex flex-wrap justify-evenly ~gap-2/4">
 			<A href="/">Home</A>
 			<A href="/profile"> Profile </A>
 			<A href="/quick-view"> Quick View </A>
