--- a/src/components/quick-view/leetcode/LeetCode.astro
+++ b/src/components/quick-view/leetcode/LeetCode.astro
@@ -29,11 +29,13 @@ export const leetcode = await LeetcodeProfile();
 <div
 	class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
 >
-	<span>Rank: <strong>{leetcode.profile?.ranking}</strong></span>
+	<span>Rank: <strong>{leetcode.matchedUser.profile?.ranking}</strong></span>
 	<span>
 		Solved: <strong>
 			{leetcode.completedCount.total} ({leetcode.completedPercentage.total})
 		</strong>
 	</span>
-	<span>Rating: <strong>{leetcode.profile?.starRating}</strong></span>
+	<span
+		>Rating: <strong>{leetcode.matchedUser.profile?.starRating}</strong></span
+	>
 </div>
