fix: image loading on leetcode

--- a/src/pages/quick-view/leetcode.astro
+++ b/src/pages/quick-view/leetcode.astro
@@ -70,7 +70,7 @@ const leetcode = await LeetcodeProfile();
 						width={96}
 						height={96}
 						decoding={"async"}
-						loading={"lazy"}
+						loading={"eager"}
 					/>
 				</span>
 			))
