--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -38,7 +38,7 @@ posts = posts.filter((acc) => acc.data.draft !== true);
 		{
 			posts.map(async (post) => (
 				<a
-					href={`/blog/${post.slug}`}
+					href={`/blog/${post.id}`}
 					class="flex w-full flex-col justify-evenly border border-border decoration-transparent ~rounded-none/xl hover:bg-foreground/10"
 				>
 					<div class="p-2 ~rounded-none/xl">
