--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ const author = await getEntry(post.data.author);
 			<span class="-my-px ~size-48/96">
 				<Image
 					alt={"DrInfinite"}
-					class="mx-auto scale-90 ~rounded-none/2xl"
+					class="mx-auto scale-90 ~rounded-none/xl"
 					width={540}
 					height={540}
 					decoding={"async"}
