refactor: changed leetcode display content

--- a/src/components/quick-view/leetcode/LeetCodeLoading.astro
+++ b/src/components/quick-view/leetcode/LeetCodeLoading.astro
@@ -21,7 +21,6 @@
  */
 ---
 
-<h3>LeetCode Stats</h3>
 <div
 	class="flex flex-wrap justify-evenly border border-border ~gap-2/4 ~rounded-none/xl ~p-2/4"
 >
@@ -35,20 +34,20 @@
 		</strong>
 	</span>
 	<span>
-		Solved: <strong class="animate-pulse">
+		Points: <strong class="animate-pulse">
 			<span
 				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 			>
-				###/#### (##.##%)
+				####
 			</span>
 		</strong>
 	</span>
-	<span
-		>Rating: <strong class="animate-pulse">
+	<span>
+		Stars: <strong class="animate-pulse">
 			<span
 				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 			>
-				#
+				###
 			</span>
 		</strong>
 	</span>
